<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_iaslab_sensors</name>
  <version>0.0.1</version>
  <description>Sensors for wheelchairs</description>
  <author email="gloria.beraldo@dei.unipd.it">Gloria Beraldo</author>
  <maintainer email="gloria.beraldo@dei.unipd.it">Gloria Beraldo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

</package>
